fix: label layouts to account for overflow

--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -33,6 +33,7 @@
 
 .mainContent {
   display: flex;
+  overflow: hidden;
   width: 100%;
   flex-direction: column;
   align-items: flex-start;
