--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -24,17 +24,20 @@
   .mainContent {
     position: relative;
     display: flex;
+    overflow: hidden;
     flex: 1;
     flex-direction: column;
     justify-content: center;
     cursor: text;
 
-
     label {
+      overflow: hidden;
       cursor: text;
       font-size: var(--ds-text-body-size-xs);
       line-height: 20px;
+      text-overflow: ellipsis;
       transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+      white-space: nowrap;
     }
 
     input {
