--- a/components/input/src/styles/color.scss
+++ b/components/input/src/styles/color.scss
@@ -36,9 +36,6 @@
     }
   }
 
-  .displayValue {
-    background-color: var(--ds-auro-input-background-color);
-  }
 }
 
 :host(:not([ondark])) {
