--- a/components/select/src/styles/style.scss
+++ b/components/select/src/styles/style.scss
@@ -37,6 +37,7 @@
 .mainContent {
   position: relative;
   display: flex;
+  overflow: hidden;
   flex: 1;
   flex-direction: column;
   align-items: center;
@@ -116,11 +117,14 @@
   }
 
   label {
+    overflow: hidden;
     cursor: text;
     font-size: 16px;
     font-weight: 450;
     letter-spacing: 0;
     line-height: 24px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
     &.withValue {
       font-size: 12px;
